# vop_poc_nz

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  Snakefile  agents.md  check_delta_qaly.py  codecov.yml  debug_install.sh  debug_traces.py  format_references.py  full_log.txt  generate_presentation.py  inspect_plot_data.py  inspect_voi.py  inspection_output.txt  inspection_output_v2.txt  inspection_output_v3.txt  mkdocs.yml  monitor_ci.py  plan.md  pyproject.toml  pyrightconfig.json  pytest.ini  references.md  release-please-config.json  reproduce_evpi_error.py  reproduce_import.py  requirements.txt  ruff.toml  run_16_log.txt  run_17_log.txt  run_18_log.txt  run_19_log.txt  (+11 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release-please.yml  release.yml
.snakemake/metadata/: b3V0cHV0L2ZpZ3VyZXM=  b3V0cHV0L2ZpZ3VyZXMvZGFzaGJvYXJkX2NlX3ZvaV9zb2NpZXRhbC5wbmc=  b3V0cHV0L2ZpZ3VyZXMvZGlzY29yZGFuY2VfbG9zcy5wbmc=  b3V0cHV0L2xhdGVzdC9jb21iaW5lZF9yZXBvcnQubWQ=  b3V0cHV0L2xhdGVzdC9maWd1cmVz  b3V0cHV0L2xhdGVzdC9maWd1cmVzL2Rhc2hib2FyZF9jZV92b2lfc29jaWV0YWwucG5n  b3V0cHV0L2xhdGVzdC9maWd1cmVzL2Rpc2NvcmRhbmNlX2xvc3MucG5n  b3V0cHV0L2xhdGVzdC9yZXBvcnRz  b3V0cHV0L2xhdGVzdC9yZXBvcnRzL3BvbGljeV9icmllZi5tZA==  b3V0cHV0L3JlcG9ydHM=  b3V0cHV0L3JlcG9ydHMvcG9saWN5X2JyaWVmLm1k
conda-forge/: meta.yaml
docs/: ACT.md  FORMULAE.md  PLAN.md  TODO.md  TODO.md.bak  dcea_review.md  documentation.md  final_summary_report.md  hybrid_study_report.md  plot_feature_matrix.md  study_1_report.md  study_2_report.md  vop_poc_nz_summary.md
docs/diagrams/: architecture.mmd  dataflow.mmd  pipeline.mmd
docs_src/: index.md
docs_src/api/: cea_model.md  dcea.md  sensitivity.md  value_of_information.md  visualization.md
docs_src/getting-started/: installation.md  quickstart.md
notebooks/: tutorial.ipynb
nzmj_feedback/figures/: decision_tree_childhood_obesity_prevention  decision_tree_hepatitis_c_therapy  decision_tree_housing_insulation  decision_tree_hpv_vaccination  decision_tree_smoking_cessation
pptx/: Health_Economic_Analysis_v2_20251127.pptx  Health_Economic_Analysis_v3_20251127.pptx
references/: housing_insulation_motu.md
src/: bia_model.py  cea_model_core.py  cea_model_dsa.py  cluster_analysis.py  dce_models.py  dcea_analysis.py  dcea_equity_analysis.py  discordance_analysis.py  dsa_analysis.py  logging_config.py  main.py  main_analysis.py  parameters.yaml  perspective_value_dsa.py  perspective_value_viz.py  plotting.py  policy_brief_generator.py  profile_scalability.py  profiling.py  reporting.py  sobol_analysis.py  table_generation.py  test_dsa_enhancements.py  threshold_analysis.py  validation.py  value_of_information.py  visualizations.py  visualizations_comparative.py  visualizations_extended.py
src/pipeline/: analysis.py  reporting.py
src/vop_poc_nz/: __init__.py  bia_model.py  cea_model_core.py  dcea_equity_analysis.py  discordance_analysis.py  dsa_analysis.py  logging_config.py  main.py  main_analysis.py  parameters.yaml  parameters.yaml.template  perspective_value_dsa.py  perspective_value_viz.py  policy_brief_generator.py  profile_scalability.py  profiling.py  reporting.py  sobol_analysis.py  table_generation.py  test_dsa_enhancements.py  threshold_analysis.py  validation.py  value_of_information.py  visualizations.py  visualizations_comparative.py  visualizations_extended.py
src/vop_poc_nz/pipeline/: analysis.py  reporting.py
src/vop_poc_nz/templates/: Snakefile  __init__.py
tests/: conftest.py  test_additional_smoke.py  test_analysis.py  test_branch_cover_additional.py  test_cea_model_core_coverage.py  test_cluster_and_dsa_visuals.py  test_core_functions.py  test_coverage_boost.py  test_dcea_equity_coverage.py  test_dcea_equity_smoke.py  test_dcea_integration.py  test_dcea_value_reporting.py  test_evpi_properties.py  test_hypothesis_extended.py  test_new_features.py  test_pipeline_reporting_coverage.py  test_policy_brief.py  test_property_based.py  test_remaining_analysis_flows.py  test_reporting_and_core.py  test_smoke_coverage.py  test_sobol_coverage.py  test_table_generation_coverage.py  test_validation.py  test_visualizations_ce.py  test_visualizations_comparative_coverage.py  test_visualizations_equity.py  test_visualizations_extra.py  test_visualizations_new.py  test_voi_coverage.py
