[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vop_poc_nz"
version = "0.1.0"
requires-python = ">=3.8"
description = "Canonical implementation of health economic analysis addressing reviewer feedback"
readme = "README.md"
authors = [{name = "Research Team"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "statsmodels>=0.13.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10.0",
    "ruff>=0.1.6",
    "mypy>=0.950",
    "pyright>=1.1.350",
    "pydantic>=2.5.0",
    "pandera>=0.18.0",
    "hypothesis>=6.0.0",
    "great-tables>=0.5.0",
    "pre-commit>=3.7.0",
    "deptry>=0.12.0",
    "vulture>=2.10",
    "memray>=1.11.0; sys_platform != 'win32'",
    "viztracer>=0.16.0",
    "mutmut>=2.4.0",
    "tox>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/edithatogo/vop_poc_nz"
Repository = "https://github.com/edithatogo/vop_poc_nz"

[tool.poetry]
name = "vop_poc_nz"
version = "0.1.0"
description = "Health economic evaluation demonstrating the Value of Perspective for Aotearoa New Zealand"
authors = ["Research Team"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.21.0"
pandas = ">=1.3.0"
scipy = ">=1.7.0"
scikit-learn = ">=1.0.0"
matplotlib = ">=3.5.0"
seaborn = ">=0.11.0"
statsmodels = ">=0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0"
pytest-cov = ">=2.10.0"
ruff = ">=0.1.6"
mypy = ">=0.950"
pyright = ">=1.1.350"
pydantic = ">=2.5.0"
pandera = ">=0.18.0"
hypothesis = ">=6.0.0"
deptry = ">=0.12.0"
vulture = ">=2.10"
memray = {version = ">=1.11.0", markers = "sys_platform != 'win32'"}
viztracer = ">=0.16.0"
mutmut = ">=2.4.0"
tox = ">=4.0.0"

[tool.uv]
# uv uses the same dependency definitions from pyproject; no additional config needed.

[tool.ruff]
line-length = 88
target-version = "py38"
extend-exclude = [
    "notebooks/*.ipynb",
    "notebooks/**/*.ipynb",
    "htmlcov",
    "output",
    "data",
    "test_output",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
    "UP",
    "SIM",
    "PGH",
    "RUF",
]
extend-ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["vop_poc_nz", "src"]
known-third-party = ["numpy", "pandas", "scipy", "matplotlib", "seaborn", "statsmodels", "sklearn"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/main_analysis.py"]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = [
    "^__init__\\.py$",
    "^src/__init__\\.py$",
    "notebooks",
    "data",
    "output",
    ".venv",
    ".mypy_cache",
    ".ruff_cache",
    "generate_presentation\\.py",
    "format_references\\.py",
]
explicit_package_bases = true

[tool.deptry]
known_first_party = ["vop_poc_nz", "src"]
exclude = [
    "notebooks",
    "tests",
    "docs"
]

[tool.deptry.per_rule_ignores]
DEP002 = ["scikit-learn", "seaborn", "statsmodels", "tox", "mutmut", "deptry", "vulture", "memray", "viztracer", "pytest", "pytest-cov", "ruff", "mypy", "pyright", "pydantic", "pandera", "hypothesis", "pre-commit", "great-tables"]
DEP001 = ["src"]

[tool.vulture]
exclude = ["notebooks", "tests", "output", "build", "dist", ".venv"]
ignore_decorators = ["@pytest.fixture"]
ignore_names = ["visit_*", "do_*"]
min_confidence = 80
paths = ["src"]
sort_by_size = true
verbose = false

[tool.setuptools.packages.find]
where = ["." ]
include = ["vop_poc_nz*"]
