[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vop_poc_nz"
version = "0.1.3"
description = "Distributional cost-effectiveness analysis framework for Aotearoa New Zealand"
readme = "README.md"
requires-python = ">=3.9"
# The license expression above declares Apache-2.0. The license text is shipped via
# Hatch's force-include configuration so wheels contain the notice.
authors = [
    { name = "Research Team" },
]
maintainers = [
    { name = "Research Team", email = "research-team@example.com" },
]
keywords = [
    "health-economics",
    "cost-effectiveness",
    "dcea",
    "value-of-information",
    "public-health",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "statsmodels>=0.13",
    "Jinja2>=3.1",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "deptry>=0.12",
    "great-tables>=0.5",
    "hypothesis>=6.100",
    "memray>=1.11; sys_platform != 'win32'",
    "mypy>=1.9",
    "pandera>=0.18",
    "pre-commit>=3.7",
    "pyright>=1.1.350",
    "pytest>=8",
    "pytest-cov>=4",
    "ruff>=0.5",
    "tox>=4.12",
    "vulture>=2.10",
    "viztracer>=0.16",
]
viz = [
    "plotnine>=0.13",
    "scienceplots>=2.1",
]
reporting = [
    "openpyxl>=3.1",
    "pydantic>=2.5",
]

[project.scripts]
vop-poc-nz = "vop_poc_nz.main:main"

[project.urls]
Homepage = "https://github.com/edithatogo/vop_poc_nz"
Repository = "https://github.com/edithatogo/vop_poc_nz"
Issues = "https://github.com/edithatogo/vop_poc_nz/issues"
Changelog = "https://github.com/edithatogo/vop_poc_nz/blob/main/CHANGELOG.md"

[tool.hatch.build]
exclude = [
    "docs/**",
    "notebooks/**",
    "output/**",
    "htmlcov/**",
    "test_output/**",
    "__pycache__/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vop_poc_nz"]

[tool.hatch.build.targets.wheel.force-include]
"LICENSE" = "LICENSE"
"README.md" = "README.md"
"CHANGELOG.md" = "CHANGELOG.md"
"CODE_OF_CONDUCT.md" = "CODE_OF_CONDUCT.md"
"CONTRIBUTING.md" = "CONTRIBUTING.md"
"CITATION.cff" = "CITATION.cff"

[tool.hatch.build.targets.sdist]
include = [
    "src/vop_poc_nz",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "CITATION.cff",
    "LICENSE",
    "MANIFEST.in",
    "pyproject.toml",
    "requirements.txt",
    "tox.ini",
    "pytest.ini",
    "ruff.toml",
    "pyrightconfig.json",
]
exclude = [
    "docs/**",
    "notebooks/**",
    "output/**",
    "htmlcov/**",
    "test_output/**",
    "__pycache__/**",
]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = [
    "notebooks/*.ipynb",
    "notebooks/**/*.ipynb",
    "htmlcov",
    "output",
    "data",
    "test_output",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
    "UP",
    "SIM",
    "PGH",
    "RUF",
]
extend-ignore = [
    "E501",   # Line too long (handled by formatter)
    "E701",   # Multiple statements on one line (acceptable in some contexts)
    "E741",   # Ambiguous variable name (acceptable for loop vars)
    "E402",   # Module level import not at top (needed for conditional imports)
    "C901",   # Function too complex (acceptable for analysis functions)
    "B007",   # Unused loop control variable (underscore prefix is optional)
    "RUF013", # PEP 484 implicit Optional (legacy code pattern)
    "SIM102", # Nested if statements (sometimes clearer)
    "SIM105", # Use contextlib.suppress (not always clearer)
    "E731",   # Lambda assignment (acceptable for simple callbacks)
    "RUF015", # Prefer next(iter()) (stylistic preference)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["vop_poc_nz"]
known-third-party = ["numpy", "pandas", "scipy", "matplotlib", "seaborn", "statsmodels", "sklearn"]

[tool.coverage.run]
branch = true
source = ["vop_poc_nz"]
omit = [
    "vop_poc_nz/main_analysis.py",
    "vop_poc_nz/main.py",
    "vop_poc_nz/profiling.py",
    "vop_poc_nz/profile_scalability.py",
    "vop_poc_nz/test_dsa_enhancements.py",
    "vop_poc_nz/logging_config.py",
    "vop_poc_nz/perspective_value_dsa.py",
    "vop_poc_nz/perspective_value_viz.py",
    "vop_poc_nz/visualizations_extended.py",
    "vop_poc_nz/visualizations_comparative.py",
    "vop_poc_nz/policy_brief_generator.py",
    "vop_poc_nz/table_generation.py",
    "vop_poc_nz/pipeline/analysis.py",
    "vop_poc_nz/pipeline/reporting.py",
    "vop_poc_nz/visualizations.py",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "except ImportError:",
    "logger\\.(debug|info|warning)",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
mypy_path = "src"
packages = ["vop_poc_nz"]
exclude = [
    "notebooks",
    "data",
    "output",
    ".venv",
    ".mypy_cache",
    ".ruff_cache",
    "generate_presentation\\.py",
    "format_references\\.py",
]
explicit_package_bases = true

[tool.deptry]
known_first_party = ["vop_poc_nz"]
exclude = [
    "notebooks",
    "tests",
    "docs",
    "output"
]

[tool.deptry.per_rule_ignores]
DEP002 = ["scikit-learn", "seaborn", "statsmodels", "tox", "mutmut", "deptry", "vulture", "memray", "viztracer", "pytest", "pytest-cov", "ruff", "mypy", "pyright", "pydantic", "pandera", "hypothesis", "pre-commit", "great-tables"]
DEP001 = ["vop_poc_nz"]

[tool.vulture]
exclude = ["notebooks", "tests", "output", "build", "dist", ".venv"]
ignore_decorators = ["@pytest.fixture"]
ignore_names = ["visit_*", "do_*"]
min_confidence = 80
paths = ["src/vop_poc_nz"]
sort_by_size = true
verbose = false

[tool.bandit]
exclude_dirs = ["tests", "notebooks", "output", ".venv"]
skips = ["B101", "B311"]  # Skip assert and random warnings
