[metadata]
name = vop-poc-nz
version = 0.1.0
description = Canonical implementation of health economic analysis addressing reviewer feedback
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/user/health-economics-canonical
author = Research Team
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir = 
    = src
packages = find:
install_requires =
    numpy>=1.21.0
    pandas>=1.3.0
    scipy>=1.7.0
    scikit-learn>=1.0.0
    matplotlib>=3.5.0
    seaborn>=0.11.0
    statsmodels>=0.13.0

[options.packages.find]
where = .

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.10.0
    ruff>=0.1.6
    black>=22.0.0
    mypy>=0.950